<resources>
    <string name="inbox">Inbox</string>
    <string name="batch">Batch</string>
    <string name="terms">Terms</string>
    <string name="aboutus">About Us</string>
    <string name="chat_options">Chat Options</string>
    <string name="faq">FAQ</string>
    <string name="feedback">Feedback</string>
    <string name="insights">Insights</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="configure">Configure</string>
    <string name="pause">Pause Batching</string>
    <string name="app_name">Notiga</string>
    <string name="app_description">Boost your productivity</string>

    <string name="icon_description">Notification app icon</string>
    <string name="right_arrow">Right arrow</string>

    <string name="app_inbox">Notifications</string>
</resources>