<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/inbox"
    app:startDestination="@id/inboxFragment">

    <fragment
        android:id="@+id/inboxFragment"
        android:name="com.dullabs.notiga.ui.inbox.InboxFragment"
        android:label="@string/inbox"
        tools:layout="@layout/fragment_inbox" >
        <action
            android:id="@+id/action_inboxFragment_to_appInboxFragment"
            app:destination="@id/appInboxFragment" />
    </fragment>
    <fragment
        android:id="@+id/aboutUsFragment"
        android:name="com.dullabs.notiga.ui.aboutus.AboutUsFragment"
        android:label="@string/aboutus"
        tools:layout="@layout/fragment_aboutus" />
    <fragment
        android:id="@+id/chatOptionsFragment"
        android:name="com.dullabs.notiga.ui.chatoptions.ChatOptionsFragment"
        android:label="@string/chat_options"
        tools:layout="@layout/fragment_chat_options" />
    <fragment
        android:id="@+id/faqFragment"
        android:name="com.dullabs.notiga.ui.faq.FaqFragment"
        android:label="@string/faq"
        tools:layout="@layout/fragment_faq" />
    <fragment
        android:id="@+id/feedbackFragment"
        android:name="com.dullabs.notiga.ui.feedback.FeedbackFragment"
        android:label="@string/feedback"
        tools:layout="@layout/fragment_feedback" />
    <fragment
        android:id="@+id/insightsFragment"
        android:name="com.dullabs.notiga.ui.insights.InsightsFragment"
        android:label="@string/insights"
        tools:layout="@layout/fragment_insights" />
    <fragment
        android:id="@+id/privacyPolicyFragment"
        android:name="com.dullabs.notiga.ui.privacypolicy.PrivacyPolicyFragment"
        android:label="@string/privacy_policy"
        tools:layout="@layout/fragment_privacy_policy" />
    <fragment
        android:id="@+id/appInboxFragment"
        android:name="com.dullabs.notiga.ui.appinbox.AppInboxFragment"
        android:label="@string/app_inbox"
        tools:layout="@layout/fragment_app_inbox" >
        <argument
            android:name="app_name"
            app:argType="string" />
    </fragment>
</navigation>